--- a/index.html
+++ b/index.html
@@ -8,5 +8,24 @@
     </head>
     <body>
         <h1>Table template</h1>
+
+        <table>
+            <caption>
+                Planets data
+            </caption>
+            <thead>
+                <th>Name</th>
+                <th>Mass (10<sup>24</sup>kg)</th>
+                <th>Diameter (km)</th>
+                <th>Density (kg/m<sup>3</sup>)</th>
+                <th>Gravity (m/s<sup>2</sup>)</th>
+                <th>Length of day (hours)</th>
+                <th>Distance from Sun (10<sup>6</sup>km)</th>
+                <th>Mean temperature (°C)</th>
+                <th>Number of moons</th>
+                <th>Notes</th>
+            </thead>
+            <tbody></tbody>
+        </table>
     </body>
 </html>
