--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 
         <table>
             <caption>
-                Planets data
+                Data about the planets of our solar system (Planetary facts
+                taken from
+                <a href="http://nssdc.gsfc.nasa.gov/planetary/factsheet/"
+                    >Nasa's Planetary Fact Sheet - Metric</a
+                >).
             </caption>
             <thead>
                 <th>Name</th>
@@ -25,6 +29,7 @@
                 <th>Number of moons</th>
                 <th>Notes</th>
             </thead>
+
             <tbody></tbody>
         </table>
     </body>
