--- a/index.html
+++ b/index.html
@@ -102,10 +102,25 @@
                     <td>62</td>
                 </tr>
                 <tr>
-                    Uranus 86.8 51,118 1271 8.7 17.2 2872.5 -195 27
+                    <td>Uranus</td>
+                    <td>86.8</td>
+                    <td>51,118</td>
+                    <td>1271</td>
+                    <td>8.7</td>
+                    <td>17.2</td>
+                    <td>2872.5</td>
+                    <td>-195 27</td>
                 </tr>
                 <tr>
-                    Neptune 102 49,528 1638 11.0 16.1 4495.1 -200 14
+                    <td>Neptune</td>
+                    <td>102</td>
+                    <td>49,528</td>
+                    <td>1638</td>
+                    <td>11.0</td>
+                    <td>16.1</td>
+                    <td>4495.1</td>
+                    <td>-200</td>
+                    <td>14</td>
                 </tr>
                 <tr>
                     Pluto 0.0146 2,370 2095 0.7 153.3 5906.4 -225 5 Declassified
