--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 >).
             </caption>
             <thead>
+                <th colspan="2">&nbsp</th>
                 <th>Name</th>
                 <th>Mass (10<sup>24</sup>kg)</th>
                 <th>Diameter (km)</th>
@@ -32,6 +33,7 @@
 
             <tbody>
                 <tr>
+                    <td colspan="2" rowspan="4">Terrestrial planets</td>
                     <td>Mercury</td>
                     <td>0.330</td>
                     <td>4,879</td>
@@ -80,6 +82,8 @@
                     <td>The red planet</td>
                 </tr>
                 <tr>
+                    <td rowspan="4">Jovian planets</td>
+                    <td rowspan="2">Gas giants</td>
                     <td>Jupiter</td>
                     <td>1898</td>
                     <td>142,984</td>
@@ -104,6 +108,7 @@
                     <td>&nbsp</td>
                 </tr>
                 <tr>
+                    <td rowspan="2">Ice giants</td>
                     <td>Uranus</td>
                     <td>86.8</td>
                     <td>51,118</td>
@@ -128,6 +133,7 @@
                     <td>&nbsp</td>
                 </tr>
                 <tr>
+                    <td colspan="2">Dwarf planets*</td>
                     <td>Pluto</td>
                     <td>0.0146</td>
                     <td>2,370</td>
