change row headers tag from td to th, and set span

--- a/index.html
+++ b/index.html
@@ -18,22 +18,24 @@
                 >).
             </caption>
             <thead>
-                <th colspan="2">&nbsp</th>
-                <th>Name</th>
-                <th>Mass (10<sup>24</sup>kg)</th>
-                <th>Diameter (km)</th>
-                <th>Density (kg/m<sup>3</sup>)</th>
-                <th>Gravity (m/s<sup>2</sup>)</th>
-                <th>Length of day (hours)</th>
-                <th>Distance from Sun (10<sup>6</sup>km)</th>
-                <th>Mean temperature (°C)</th>
-                <th>Number of moons</th>
-                <th>Notes</th>
+                <th span="col" colspan="2">&nbsp</th>
+                <th span="col">Name</th>
+                <th span="col">Mass (10<sup>24</sup>kg)</th>
+                <th span="col">Diameter (km)</th>
+                <th span="col">Density (kg/m<sup>3</sup>)</th>
+                <th span="col">Gravity (m/s<sup>2</sup>)</th>
+                <th span="col">Length of day (hours)</th>
+                <th span="col">Distance from Sun (10<sup>6</sup>km)</th>
+                <th span="col">Mean temperature (°C)</th>
+                <th span="col">Number of moons</th>
+                <th span="col">Notes</th>
             </thead>
 
             <tbody>
                 <tr>
-                    <td colspan="2" rowspan="4">Terrestrial planets</td>
+                    <th span="rowgroup" colspan="2" rowspan="4">
+                        Terrestrial planets
+                    </th>
                     <td>Mercury</td>
                     <td>0.330</td>
                     <td>4,879</td>
@@ -82,8 +84,8 @@
                     <td>The red planet</td>
                 </tr>
                 <tr>
-                    <td rowspan="4">Jovian planets</td>
-                    <td rowspan="2">Gas giants</td>
+                    <th span="rowgroup" rowspan="4">Jovian planets</th>
+                    <th span="rowgroup" rowspan="2">Gas giants</th>
                     <td>Jupiter</td>
                     <td>1898</td>
                     <td>142,984</td>
@@ -108,7 +110,7 @@
                     <td>&nbsp</td>
                 </tr>
                 <tr>
-                    <td rowspan="2">Ice giants</td>
+                    <th span="rowgroup" rowspan="2">Ice giants</th>
                     <td>Uranus</td>
                     <td>86.8</td>
                     <td>51,118</td>
@@ -133,7 +135,7 @@
                     <td>&nbsp</td>
                 </tr>
                 <tr>
-                    <td colspan="2">Dwarf planets*</td>
+                    <th span="row" colspan="2">Dwarf planets*</th>
                     <td>Pluto</td>
                     <td>0.0146</td>
                     <td>2,370</td>
