--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
         <link rel="stylesheet" type="text/css" href="./style.css" />
     </head>
     <body>
-        <h1>Table template</h1>
+        <h1>Planets data</h1>
 
         <table>
+            <colgroup>
+                <col />
+                <col />
+                <col style="border: 3px solid black" />
+            </colgroup>
             <caption>
                 Data about the planets of our solar system (Planetary facts
                 taken from
