--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
         <table>
             <colgroup>
-                <col />
-                <col />
-                <col style="border: 3px solid black" />
+                <col span="2" />
+                <col style="border: 2px solid black; font-style: bold" />
+                <col span="9" />
             </colgroup>
             <caption>
                 Data about the planets of our solar system (Planetary facts
@@ -23,7 +23,7 @@
                 >).
             </caption>
             <thead>
-                <th span="col" colspan="2">&nbsp</th>
+                <td span="col" colspan="2">&nbsp</td>
                 <th span="col">Name</th>
                 <th span="col">Mass (10<sup>24</sup>kg)</th>
                 <th span="col">Diameter (km)</th>
@@ -41,7 +41,7 @@
                     <th span="rowgroup" colspan="2" rowspan="4">
                         Terrestrial planets
                     </th>
-                    <td>Mercury</td>
+                    <th>Mercury</th>
                     <td>0.330</td>
                     <td>4,879</td>
                     <td>5427</td>
@@ -53,7 +53,7 @@
                     <td>Closest to the Sun</td>
                 </tr>
                 <tr>
-                    <td>Venus</td>
+                    <th>Venus</th>
                     <td>4.87</td>
                     <td>12,104</td>
                     <td>5243</td>
@@ -65,7 +65,7 @@
                     <td>&nbsp</td>
                 </tr>
                 <tr>
-                    <td>Earth</td>
+                    <th>Earth</th>
                     <td>5.97</td>
                     <td>12,756</td>
                     <td>5514</td>
@@ -77,7 +77,7 @@
                     <td>Our world</td>
                 </tr>
                 <tr>
-                    <td>Mars</td>
+                    <th>Mars</th>
                     <td>0.642</td>
                     <td>6,792</td>
                     <td>3933</td>
@@ -91,7 +91,7 @@
                 <tr>
                     <th span="rowgroup" rowspan="4">Jovian planets</th>
                     <th span="rowgroup" rowspan="2">Gas giants</th>
-                    <td>Jupiter</td>
+                    <th>Jupiter</th>
                     <td>1898</td>
                     <td>142,984</td>
                     <td>1326</td>
@@ -103,7 +103,7 @@
                     <td>The largest planet</td>
                 </tr>
                 <tr>
-                    <td>Saturn</td>
+                    <th>Saturn</th>
                     <td>568</td>
                     <td>120,536</td>
                     <td>687</td>
@@ -116,7 +116,7 @@
                 </tr>
                 <tr>
                     <th span="rowgroup" rowspan="2">Ice giants</th>
-                    <td>Uranus</td>
+                    <th>Uranus</th>
                     <td>86.8</td>
                     <td>51,118</td>
                     <td>1271</td>
@@ -128,7 +128,7 @@
                     <td>&nbsp</td>
                 </tr>
                 <tr>
-                    <td>Neptune</td>
+                    <th>Neptune</th>
                     <td>102</td>
                     <td>49,528</td>
                     <td>1638</td>
@@ -141,7 +141,7 @@
                 </tr>
                 <tr>
                     <th span="row" colspan="2">Dwarf planets*</th>
-                    <td>Pluto</td>
+                    <th>Pluto</th>
                     <td>0.0146</td>
                     <td>2,370</td>
                     <td>2095</td>
