try before and after psuedo elements

--- a/index.html
+++ b/index.html
@@ -160,5 +160,20 @@
                 </tr>
             </tbody>
         </table>
+        <footer>
+            <style>
+                .emojify::before {
+                    content: '😎 🥸 🤓';
+                }
+
+                .emojify::after {
+                    content: '🤓 🥸 😎';
+                }
+            </style>
+
+            <body>
+                <div>Let's <span class="emojify">emojify</span>this span!</div>
+            </body>
+        </footer>
     </body>
 </html>
