--- a/index.html
+++ b/index.html
@@ -160,6 +160,18 @@
                 </tr>
             </tbody>
         </table>
+        <select name="fashion">
+            <optgroup label="Clothing">
+                <option value="t_shirt">T-Shirts</option>
+                <option value="sweater">Sweaters</option>
+                <option value="coats">Coats</option>
+            </optgroup>
+            <optgroup label="Foot Wear">
+                <option value="sneakers">Sneakers</option>
+                <option value="boots">Boots</option>
+                <option value="sandals">Sandals</option>
+            </optgroup>
+        </select>
         <footer>
             <style>
                 .emojify::before {
