--- a/index.html
+++ b/index.html
@@ -7,6 +7,97 @@
         <link rel="stylesheet" type="text/css" href="./style.css" />
     </head>
     <body>
+        <select name="fashion">
+            <optgroup label="Clothing">
+                <option value="t_shirt">T-Shirts</option>
+                <option value="sweater">Sweaters</option>
+                <option value="coats">Coats</option>
+            </optgroup>
+            <optgroup label="Foot Wear">
+                <option value="sneakers">Sneakers</option>
+                <option value="boots">Boots</option>
+                <option value="sandals">Sandals</option>
+            </optgroup>
+        </select>
+
+        <h1>Ticket Type</h1>
+        <div>
+            <input type="radio" id="child" name="ticket_type" value="child" />
+            <label for="child">Child</label>
+        </div>
+
+        <div>
+            <input
+                type="radio"
+                id="adult"
+                name="ticket_type"
+                value="adult"
+                checked
+            />
+            <label for="adult">Adult</label>
+        </div>
+
+        <div>
+            <input type="radio" id="senior" name="ticket_type" value="senior" />
+            <label for="senior">Senior</label>
+        </div>
+
+        <h1>Pizza Toppings</h1>
+
+        <div>
+            <input
+                type="checkbox"
+                id="sausage"
+                name="topping"
+                value="sausage"
+            />
+            <label for="sausage">Sausage</label>
+        </div>
+
+        <div>
+            <input type="checkbox" id="onions" name="topping" value="onions" />
+            <label for="onions">Onions</label>
+        </div>
+
+        <div>
+            <input
+                type="checkbox"
+                id="pepperoni"
+                name="topping"
+                value="pepperoni"
+            />
+            <label for="pepperoni">Pepperoni</label>
+        </div>
+
+        <div>
+            <input
+                type="checkbox"
+                id="mushrooms"
+                name="topping"
+                value="mushrooms"
+            />
+            <label for="mushrooms">Mushrooms</label>
+        </div>
+
+        <fieldset>
+            <legend>What would you like to drink?</legend>
+
+            <div>
+                <input type="radio" name="drink" id="coffee" value="coffee" />
+                <label for="coffee">Coffee</label>
+            </div>
+
+            <div>
+                <input type="radio" name="drink" id="tea" value="tea" />
+                <label for="tea">Tea</label>
+            </div>
+
+            <div>
+                <input type="radio" name="drink" id="soda" value="soda" />
+                <label for="soda">Soda</label>
+            </div>
+        </fieldset>
+        <!---------------------->
         <h1>Planets data</h1>
 
         <table>
@@ -160,18 +251,6 @@
                 </tr>
             </tbody>
         </table>
-        <select name="fashion">
-            <optgroup label="Clothing">
-                <option value="t_shirt">T-Shirts</option>
-                <option value="sweater">Sweaters</option>
-                <option value="coats">Coats</option>
-            </optgroup>
-            <optgroup label="Foot Wear">
-                <option value="sneakers">Sneakers</option>
-                <option value="boots">Boots</option>
-                <option value="sandals">Sandals</option>
-            </optgroup>
-        </select>
         <footer>
             <style>
                 .emojify::before {
